Trying to improve Voila GUI

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,52 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import itk\n",
     "from itkwidgets import view, compare, checkerboard\n",
+    "from itkwidgets.widget_viewer import Viewer\n",
     "import ipywidgets\n",
+    "from ipywidgets import Button, Label, HBox, VBox\n",
     "import os"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Image registration** finds the *spatial transformation that aligns images in the presence of noise*.\n",
-    "First, let's load our **fixed image** and the image we will align to our fixed image, the **moving image**."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fixed image:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c9effeafd3a40cf8a1a2921f077a26b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "viewerFixed = Viewer(image=None)\n",
+    "viewerMoving = Viewer(image=None)\n",
+    "top_box=HBox([Label('Fixed image'), Label('Moving image')])\n",
+    "in_box=HBox([viewerFixed, viewerMoving])\n",
+    "mid_box=HBox([Label('Checkerboard before'), Label('Checkerboard after')])\n",
+    "out_box=HBox([viewerFixed, viewerMoving])\n",
+    "imageViews = VBox([top_box, in_box, mid_box, out_box])\n",
+    "\n",
+    "display(imageViews)\n",
+    "\n",
     "# these FileUpload widgets have maximum size\n",
     "# controlled via jupyter_notebook_config.py\n",
     "# https://github.com/jupyter-widgets/ipywidgets/issues/2522\n",
@@ -59,32 +41,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Moving image:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bec67095a3048af9ccd6a8ca96c9381",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "movingUploader = ipywidgets.FileUpload(\n",
     "    accept='image/*,.nrrd,.mha,.nii',\n",
@@ -95,31 +55,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1039af18e71343f19b781b0749194440",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Load and view', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
     "display(viewButton)\n",
     "\n",
     "appState={'fixed':None, 'moving':None}\n",
+    "out = ipywidgets.Output(layout={'border': '2px solid blue'})\n",
+    "display(out)\n",
     "\n",
     "def viewImages(b):\n",
+    "    movingButton=Button(description='Moving Updated')\n",
+    "    \n",
     "    # write to temporary image file\n",
     "    # I don't know how to read image from memory in Python\n",
     "    # using FileUpload's syntax for ipywidgets <= 7\n",
@@ -128,6 +77,7 @@
     "        fp.write(fixedUploader.data[0])\n",
     "    appState['fixed'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
+    "    viewerFixed.image=appState['fixed']\n",
     "\n",
     "    tempFilename=\"./moving_\"+ next(iter(movingUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
@@ -135,38 +85,18 @@
     "    appState['moving'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
     "    \n",
-    "    display(compare(appState['fixed'], appState['moving'], link_cmap=True, link_gradient_opacity=True))\n",
+    "    out.clear_output(wait=True)\n",
+    "    # with out:\n",
+    "    #display(compare(appState['fixed'], appState['moving'], link_cmap=True, link_gradient_opacity=True))\n",
     "\n",
     "viewButton.on_click(viewImages)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before registration, the moving image is not aligned with the fixed image."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49ef8c576cc24f0081f93d6342bbd918",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='View checkerboard', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkerboardButton = ipywidgets.Button(description=\"View checkerboard\")\n",
     "display(checkerboardButton)\n",
@@ -179,52 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cdfcd828046a4617a4e5d85e4333e8ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='Type:', options=('rigid', 'affine', 'bspline'), value='rigid')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8747cb27a8ee493997a4715c658cf52b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Register and view', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d515d98c66054f809b0a1b4189bae743",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "regType=ipywidgets.RadioButtons(\n",
     "    options=['rigid', 'affine', 'bspline'],\n",
@@ -237,8 +124,6 @@
     "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
     "display(registerButton)\n",
     "\n",
-    "out = ipywidgets.Output()\n",
-    "display(out)\n",
     "\n",
     "def registerImages(b):\n",
     "    out.clear_output(wait=True)\n",
