--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,31 +2,181 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c09c5b6216604b06a742f5bab9dfdbd9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='1'), Text(value='2')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b08c1ba7a6e842f3b7690365388fe913",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Add', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67183fa5444c4c4f98a54a14f6d6c766",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(Label(value='Fixed image'), Label(value='Moving image'))), HBox(children=(Label(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c5abd210a233473a874cc577281addb7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ecf29ee3e2a4a679c688fde37db44c7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d69441f47e84957b3ac3d41ab3f4b27",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Load and view', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c427931ad22447a4a42779fbd3ee3e31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border='2px solid blue'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6d598757c24a4601845a5648e4f11822",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='View checkerboard', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4088e14d94774831ac8142a7c08ea5cb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "RadioButtons(description='Type:', options=('rigid', 'affine', 'bspline'), value='rigid')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6572de480f234db685b0cd094fdd80d7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Register and view', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "import ipywidgets as wg\n",
+    "from ipywidgets import Layout\n",
+    "from IPython.display import display\n",
+    "\n",
+    "vb = wg.VBox([wg.Text('1'),wg.Text('2')])\n",
+    "btn = wg.Button(description = 'Add') \n",
+    "\n",
+    "def on_bttn_clicked(b):        \n",
+    "    vb.children=tuple(list(vb.children) + [wg.Text('3')]) \n",
+    "\n",
+    "btn.on_click(on_bttn_clicked)\n",
+    "display(vb, btn)\n",
+    "\n",
+    "list(vb.children)\n",
+    "\n",
+    "\n",
     "import itk\n",
     "from itkwidgets import view, compare, checkerboard\n",
     "from itkwidgets.widget_viewer import Viewer\n",
     "import ipywidgets\n",
     "from ipywidgets import Button, Label, HBox, VBox\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "viewerFixed = Viewer(image=None)\n",
-    "viewerMoving = Viewer(image=None)\n",
+    "import os\n",
+    "\n",
+    "# viewerFixed = Viewer(image=None)\n",
+    "# viewerMoving = Viewer(image=None)\n",
     "top_box=HBox([Label('Fixed image'), Label('Moving image')])\n",
-    "in_box=HBox([viewerFixed, viewerMoving])\n",
+    "# in_box=HBox([viewerFixed, viewerMoving])\n",
     "mid_box=HBox([Label('Checkerboard before'), Label('Checkerboard after')])\n",
-    "out_box=HBox([viewerFixed, viewerMoving])\n",
-    "imageViews = VBox([top_box, in_box, mid_box, out_box])\n",
+    "# out_box=HBox([viewerFixed, viewerMoving])\n",
+    "imageViews = VBox([top_box, mid_box])\n",
     "\n",
     "display(imageViews)\n",
     "\n",
@@ -37,28 +187,14 @@
     "    accept='image/*,.nrrd,.mha,.nii',\n",
     "    multiple=False\n",
     ")\n",
-    "display(fixedUploader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "display(fixedUploader)\n",
+    "\n",
     "movingUploader = ipywidgets.FileUpload(\n",
     "    accept='image/*,.nrrd,.mha,.nii',\n",
     "    multiple=False\n",
     ")\n",
-    "display(movingUploader)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "display(movingUploader)\n",
+    "\n",
     "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
     "display(viewButton)\n",
     "\n",
@@ -77,7 +213,7 @@
     "        fp.write(fixedUploader.data[0])\n",
     "    appState['fixed'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
-    "    viewerFixed.image=appState['fixed']\n",
+    "    # viewerFixed.image=appState['fixed']\n",
     "\n",
     "    tempFilename=\"./moving_\"+ next(iter(movingUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
@@ -87,32 +223,23 @@
     "    \n",
     "    out.clear_output(wait=True)\n",
     "    # with out:\n",
-    "    #display(compare(appState['fixed'], appState['moving'], link_cmap=True, link_gradient_opacity=True))\n",
+    "    compareWidget=compare(appState['fixed'],\n",
+    "                          appState['moving'],\n",
+    "                          link_cmap=True,\n",
+    "                          link_gradient_opacity=True)\n",
+    "    imageViews.children=tuple(list(imageViews.children) + [compareWidget])\n",
+    "    #display(compareWidget)\n",
     "\n",
-    "viewButton.on_click(viewImages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "viewButton.on_click(viewImages)\n",
+    "\n",
     "checkerboardButton = ipywidgets.Button(description=\"View checkerboard\")\n",
     "display(checkerboardButton)\n",
     "\n",
     "def checkerboardImages(b):  \n",
     "    display(checkerboard(appState['fixed'], appState['moving'], ui_collapsed=False))\n",
     "\n",
-    "checkerboardButton.on_click(checkerboardImages)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "checkerboardButton.on_click(checkerboardImages)\n",
+    "\n",
     "regType=ipywidgets.RadioButtons(\n",
     "    options=['rigid', 'affine', 'bspline'],\n",
     "    value='rigid', # Defaults to 'pineapple'\n",
@@ -153,6 +280,13 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
