--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c09c5b6216604b06a742f5bab9dfdbd9",
+       "model_id": "85218138adce4521ac8e76826f4aa249",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Text(value='1'), Text(value='2')))"
+       "HBox(children=(VBox(children=(Label(value='Fixed image'), FileUpload(value={}, accept='.nrrd,.mha,.nii,image/*…"
       ]
      },
      "metadata": {},
@@ -22,12 +22,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b08c1ba7a6e842f3b7690365388fe913",
+       "model_id": "1fb4dc23b26d4b979667d9e5091f0341",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(description='Add', style=ButtonStyle())"
+       "Output()"
       ]
      },
      "metadata": {},
@@ -36,12 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67183fa5444c4c4f98a54a14f6d6c766",
+       "model_id": "ffb7b09131a044148734c3f67b734ddf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Label(value='Fixed image'), Label(value='Moving image'))), HBox(children=(Label(…"
+       "HBox(children=(Button(description='Load and view', style=ButtonStyle()), RadioButtons(description='Type:', opt…"
       ]
      },
      "metadata": {},
@@ -50,96 +50,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5abd210a233473a874cc577281addb7",
+       "model_id": "a2270e759fc3458ba269247c11bc030d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ecf29ee3e2a4a679c688fde37db44c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FileUpload(value={}, accept='image/*,.nrrd,.mha,.nii', description='Upload')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d69441f47e84957b3ac3d41ab3f4b27",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Load and view', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c427931ad22447a4a42779fbd3ee3e31",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(border='2px solid blue'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d598757c24a4601845a5648e4f11822",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='View checkerboard', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4088e14d94774831ac8142a7c08ea5cb",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "RadioButtons(description='Type:', options=('rigid', 'affine', 'bspline'), value='rigid')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6572de480f234db685b0cd094fdd80d7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Register and view', style=ButtonStyle())"
+       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
       ]
      },
      "metadata": {},
@@ -147,22 +63,6 @@
     }
    ],
    "source": [
-    "import ipywidgets as wg\n",
-    "from ipywidgets import Layout\n",
-    "from IPython.display import display\n",
-    "\n",
-    "vb = wg.VBox([wg.Text('1'),wg.Text('2')])\n",
-    "btn = wg.Button(description = 'Add') \n",
-    "\n",
-    "def on_bttn_clicked(b):        \n",
-    "    vb.children=tuple(list(vb.children) + [wg.Text('3')]) \n",
-    "\n",
-    "btn.on_click(on_bttn_clicked)\n",
-    "display(vb, btn)\n",
-    "\n",
-    "list(vb.children)\n",
-    "\n",
-    "\n",
     "import itk\n",
     "from itkwidgets import view, compare, checkerboard\n",
     "from itkwidgets.widget_viewer import Viewer\n",
@@ -170,37 +70,38 @@
     "from ipywidgets import Button, Label, HBox, VBox\n",
     "import os\n",
     "\n",
-    "# viewerFixed = Viewer(image=None)\n",
-    "# viewerMoving = Viewer(image=None)\n",
-    "top_box=HBox([Label('Fixed image'), Label('Moving image')])\n",
-    "# in_box=HBox([viewerFixed, viewerMoving])\n",
-    "mid_box=HBox([Label('Checkerboard before'), Label('Checkerboard after')])\n",
-    "# out_box=HBox([viewerFixed, viewerMoving])\n",
-    "imageViews = VBox([top_box, mid_box])\n",
-    "\n",
-    "display(imageViews)\n",
-    "\n",
-    "# these FileUpload widgets have maximum size\n",
+    "# these FileUpload widgets have maximum file size\n",
     "# controlled via jupyter_notebook_config.py\n",
     "# https://github.com/jupyter-widgets/ipywidgets/issues/2522\n",
     "fixedUploader = ipywidgets.FileUpload(\n",
-    "    accept='image/*,.nrrd,.mha,.nii',\n",
-    "    multiple=False\n",
-    ")\n",
-    "display(fixedUploader)\n",
-    "\n",
+    "    accept='.nrrd,.mha,.nii,image/*',\n",
+    "    multiple=False)\n",
     "movingUploader = ipywidgets.FileUpload(\n",
-    "    accept='image/*,.nrrd,.mha,.nii',\n",
-    "    multiple=False\n",
-    ")\n",
-    "display(movingUploader)\n",
+    "    accept='.nrrd,.mha,.nii,image/*',\n",
+    "    multiple=False)\n",
     "\n",
-    "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
-    "display(viewButton)\n",
+    "\n",
+    "vboxFixed = VBox([Label('Fixed image'), fixedUploader, Viewer()])\n",
+    "vboxMoving = VBox([Label('Moving image'), movingUploader, Viewer()])\n",
+    "vboxResult = VBox([Label('Result image'), Label(' '), Viewer()])\n",
+    "imageViews = HBox([vboxFixed, vboxMoving, vboxResult])\n",
+    "display(imageViews)\n",
     "\n",
     "appState={'fixed':None, 'moving':None}\n",
-    "out = ipywidgets.Output(layout={'border': '2px solid blue'})\n",
+    "out = ipywidgets.Output()\n",
     "display(out)\n",
+    "\n",
+    "viewButton = ipywidgets.Button(description=\"Load and view\")\n",
+    "regType=ipywidgets.RadioButtons(\n",
+    "    options=['rigid', 'affine', 'bspline'],\n",
+    "    value='rigid', # Defaults to 'pineapple'\n",
+    "    description='Type:',\n",
+    "    disabled=False\n",
+    ")\n",
+    "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
+    "buttons = HBox([viewButton, regType, registerButton])\n",
+    "display(buttons)\n",
+    "\n",
     "\n",
     "def viewImages(b):\n",
     "    movingButton=Button(description='Moving Updated')\n",
@@ -213,7 +114,6 @@
     "        fp.write(fixedUploader.data[0])\n",
     "    appState['fixed'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
-    "    # viewerFixed.image=appState['fixed']\n",
     "\n",
     "    tempFilename=\"./moving_\"+ next(iter(movingUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
@@ -221,36 +121,34 @@
     "    appState['moving'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
     "    \n",
+    "    \n",
+    "    vboxFixed=imageViews.children[0]\n",
+    "    vboxFixed.children=(vboxFixed.children[0],\n",
+    "                        vboxFixed.children[1],\n",
+    "                        Viewer(image=appState['fixed']))\n",
+    "    \n",
+    "    vboxMoving=imageViews.children[1]\n",
+    "    vboxMoving.children=(vboxMoving.children[0],\n",
+    "                        vboxMoving.children[1],\n",
+    "                        Viewer(image=appState['moving']))\n",
+    "    \n",
+    "    vboxResult=imageViews.children[2]\n",
+    "    vboxResult.children=(vboxResult.children[0],\n",
+    "                        vboxResult.children[1],\n",
+    "                        checkerboard(appState['fixed'], appState['moving']))\n",
+    "    \n",
+    "    imageViews.children=(vboxFixed,\n",
+    "                        vboxMoving,\n",
+    "                        vboxResult)\n",
+    "    \n",
     "    out.clear_output(wait=True)\n",
     "    # with out:\n",
-    "    compareWidget=compare(appState['fixed'],\n",
-    "                          appState['moving'],\n",
-    "                          link_cmap=True,\n",
-    "                          link_gradient_opacity=True)\n",
-    "    imageViews.children=tuple(list(imageViews.children) + [compareWidget])\n",
-    "    #display(compareWidget)\n",
+    "#     compareWidget=compare(appState['fixed'],\n",
+    "#                           appState['moving'],\n",
+    "#                           link_cmap=True,\n",
+    "#                           link_gradient_opacity=True)\n",
     "\n",
     "viewButton.on_click(viewImages)\n",
-    "\n",
-    "checkerboardButton = ipywidgets.Button(description=\"View checkerboard\")\n",
-    "display(checkerboardButton)\n",
-    "\n",
-    "def checkerboardImages(b):  \n",
-    "    display(checkerboard(appState['fixed'], appState['moving'], ui_collapsed=False))\n",
-    "\n",
-    "checkerboardButton.on_click(checkerboardImages)\n",
-    "\n",
-    "regType=ipywidgets.RadioButtons(\n",
-    "    options=['rigid', 'affine', 'bspline'],\n",
-    "    value='rigid', # Defaults to 'pineapple'\n",
-    "    description='Type:',\n",
-    "    disabled=False\n",
-    ")\n",
-    "display(regType)\n",
-    "\n",
-    "registerButton = ipywidgets.Button(description=\"Register and view\")\n",
-    "display(registerButton)\n",
-    "\n",
     "\n",
     "def registerImages(b):\n",
     "    out.clear_output(wait=True)\n",
