--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85218138adce4521ac8e76826f4aa249",
+       "model_id": "37ad6866f6484a6285c778db28519867",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1fb4dc23b26d4b979667d9e5091f0341",
+       "model_id": "bee41f2486cb44aaa2e9e50c3cd01e92",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,26 +36,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ffb7b09131a044148734c3f67b734ddf",
+       "model_id": "7895866711ae43a5a0a91e58d523677c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "HBox(children=(Button(description='Load and view', style=ButtonStyle()), RadioButtons(description='Type:', opt…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2270e759fc3458ba269247c11bc030d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Viewer(annotations=False, interpolation=False, rendered_image=<itkImagePython.itkImageF3; proxy…"
       ]
      },
      "metadata": {},
@@ -108,6 +94,7 @@
     "    \n",
     "    # write to temporary image file\n",
     "    # I don't know how to read image from memory in Python\n",
+    "    \n",
     "    # using FileUpload's syntax for ipywidgets <= 7\n",
     "    tempFilename=\"./fixed_\"+ next(iter(fixedUploader.value))\n",
     "    with open(tempFilename, \"wb\") as fp:\n",
@@ -173,7 +160,17 @@
     "        print('Executing '+regType.value+' registration. Please wait...')\n",
     "    \n",
     "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'], parameter_object=parameters)\n",
-    "    display(checkerboard(appState['fixed'], registered_moving))\n",
+    "    \n",
+    "    vboxResult=imageViews.children[2]\n",
+    "    vboxResult.children=(vboxResult.children[0],\n",
+    "                        vboxResult.children[1],\n",
+    "                        checkerboard(appState['fixed'], registered_moving))\n",
+    "    \n",
+    "    imageViews.children=(imageViews.children[0],\n",
+    "                        imageViews.children[1],\n",
+    "                        vboxResult)\n",
+    "    \n",
+    "    # display(checkerboard(appState['fixed'], registered_moving))\n",
     "    out.clear_output()\n",
     "\n",
     "registerButton.on_click(registerImages)"
