--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37ad6866f6484a6285c778db28519867",
+       "model_id": "a9e6938ac42e479f86713b8d4bed5da0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bee41f2486cb44aaa2e9e50c3cd01e92",
+       "model_id": "4dbec751b1084d068c1016f8eaa0fa2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7895866711ae43a5a0a91e58d523677c",
+       "model_id": "8f7ffc8b9dd042069b9ec6a42beb2d0f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -120,8 +120,8 @@
     "                        Viewer(image=appState['moving']))\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
-    "    vboxResult.children=(vboxResult.children[0],\n",
-    "                        vboxResult.children[1],\n",
+    "    vboxResult.children=(Label('Fixed/moving'),\n",
+    "                        Label('checkerboard'),\n",
     "                        checkerboard(appState['fixed'], appState['moving']))\n",
     "    \n",
     "    imageViews.children=(vboxFixed,\n",
@@ -162,7 +162,7 @@
     "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'], parameter_object=parameters)\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
-    "    vboxResult.children=(vboxResult.children[0],\n",
+    "    vboxResult.children=(Label('Fixed/registered'),\n",
     "                        vboxResult.children[1],\n",
     "                        checkerboard(appState['fixed'], registered_moving))\n",
     "    \n",
@@ -175,13 +175,6 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
