The three views are now linked

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9e6938ac42e479f86713b8d4bed5da0",
+       "model_id": "3cc933fdde154f1b9f78351b3976996b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4dbec751b1084d068c1016f8eaa0fa2c",
+       "model_id": "6c1c447a1e934d439bbda09dcb05e8c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f7ffc8b9dd042069b9ec6a42beb2d0f",
+       "model_id": "aa284ee98cae40c2a89dd9d72952189c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,6 +56,59 @@
     "from ipywidgets import Button, Label, HBox, VBox\n",
     "import os\n",
     "\n",
+    "appState={'fixed':None, 'moving':None}\n",
+    "\n",
+    "# for use in viewers, from\n",
+    "# https://itk.org/ITKExamples/src/Core/Common/CreateAnImage/Documentation.html\n",
+    "def placeholderImage():\n",
+    "    Dimension = 3\n",
+    "    PixelType = itk.ctype('unsigned char')\n",
+    "    ImageType = itk.Image[PixelType, Dimension]\n",
+    "    \n",
+    "    image = ImageType.New()\n",
+    "    \n",
+    "    ind = itk.Index[Dimension]()\n",
+    "    ind[0] = 0  # first index on X\n",
+    "    ind[1] = 0  # first index on Y\n",
+    "    ind[2] = 0  # first index on Z\n",
+    "    \n",
+    "    size1 = 4\n",
+    "    size = itk.Size[Dimension]()\n",
+    "    size[0] = size1  # size along X\n",
+    "    size[1] = size1  # size along Y\n",
+    "    size[2] = size1  # size along Z\n",
+    "    \n",
+    "    region = itk.ImageRegion[Dimension]()\n",
+    "    region.SetSize(size)\n",
+    "    region.SetIndex(ind)\n",
+    "    \n",
+    "    image.SetRegions(region)\n",
+    "    image.Allocate()\n",
+    "    \n",
+    "    # set voxel values\n",
+    "    for k in range(size1):\n",
+    "        ind[2]=k\n",
+    "        for j in range(size1):\n",
+    "            ind[1]=j\n",
+    "            for i in range(size1):\n",
+    "                ind[0]=i\n",
+    "                image.SetPixel(ind, i+2*j+k*k)\n",
+    "    \n",
+    "    return image\n",
+    "\n",
+    "\n",
+    "def linkViews(viewer1, viewer2):\n",
+    "    ipywidgets.jslink((viewer1, 'mode'), (viewer2, 'mode'))\n",
+    "    ipywidgets.jslink((viewer1, 'camera'), (viewer2, 'camera'))\n",
+    "    ipywidgets.jslink((viewer1, 'roi'), (viewer2, 'roi'))\n",
+    "    ipywidgets.jslink((viewer1, 'rotate'), (viewer2, 'rotate'))\n",
+    "    ipywidgets.jslink((viewer1, 'annotations'), (viewer2, 'annotations'))\n",
+    "    ipywidgets.jslink((viewer1, 'x_slice'), (viewer2, 'x_slice'))\n",
+    "    ipywidgets.jslink((viewer1, 'y_slice'), (viewer2, 'y_slice'))\n",
+    "    ipywidgets.jslink((viewer1, 'z_slice'), (viewer2, 'z_slice'))\n",
+    "    ipywidgets.jslink((viewer1, 'slicing_planes'), (viewer2, 'slicing_planes'))\n",
+    "\n",
+    "\n",
     "# these FileUpload widgets have maximum file size\n",
     "# controlled via jupyter_notebook_config.py\n",
     "# https://github.com/jupyter-widgets/ipywidgets/issues/2522\n",
@@ -66,14 +119,21 @@
     "    accept='.nrrd,.mha,.nii,image/*',\n",
     "    multiple=False)\n",
     "\n",
+    "# create viewers which we will link to have the same view etc\n",
+    "# to change images as needed, they need to have an initial image\n",
+    "fixedViewer = Viewer(image=placeholderImage())\n",
+    "movingViewer = Viewer(image=placeholderImage())\n",
+    "resultViewer = Viewer(image=placeholderImage())\n",
+    "linkViews(fixedViewer, movingViewer)\n",
+    "linkViews(fixedViewer, resultViewer)\n",
     "\n",
-    "vboxFixed = VBox([Label('Fixed image'), fixedUploader, Viewer()])\n",
-    "vboxMoving = VBox([Label('Moving image'), movingUploader, Viewer()])\n",
-    "vboxResult = VBox([Label('Result image'), Label(' '), Viewer()])\n",
+    "vboxFixed = VBox([Label('Fixed image'), fixedUploader, fixedViewer])\n",
+    "vboxMoving = VBox([Label('Moving image'), movingUploader, movingViewer])\n",
+    "vboxResult = VBox([Label('Result image'), Label(' '), resultViewer])\n",
     "imageViews = HBox([vboxFixed, vboxMoving, vboxResult])\n",
     "display(imageViews)\n",
     "\n",
-    "appState={'fixed':None, 'moving':None}\n",
+    "\n",
     "out = ipywidgets.Output()\n",
     "display(out)\n",
     "\n",
@@ -108,32 +168,22 @@
     "    appState['moving'] = itk.imread(tempFilename, itk.F)\n",
     "    os.remove(tempFilename)\n",
     "    \n",
-    "    \n",
-    "    vboxFixed=imageViews.children[0]\n",
-    "    vboxFixed.children=(vboxFixed.children[0],\n",
-    "                        vboxFixed.children[1],\n",
-    "                        Viewer(image=appState['fixed']))\n",
-    "    \n",
-    "    vboxMoving=imageViews.children[1]\n",
-    "    vboxMoving.children=(vboxMoving.children[0],\n",
-    "                        vboxMoving.children[1],\n",
-    "                        Viewer(image=appState['moving']))\n",
+    "    fixedViewer.image=appState['fixed']\n",
+    "    movingViewer.image=appState['moving']\n",
+    "    resultViewer=checkerboard(appState['fixed'], appState['moving'])\n",
+    "    linkViews(fixedViewer, resultViewer.children[0])\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
     "    vboxResult.children=(Label('Fixed/moving'),\n",
     "                        Label('checkerboard'),\n",
-    "                        checkerboard(appState['fixed'], appState['moving']))\n",
+    "                        resultViewer)\n",
     "    \n",
     "    imageViews.children=(vboxFixed,\n",
     "                        vboxMoving,\n",
     "                        vboxResult)\n",
     "    \n",
     "    out.clear_output(wait=True)\n",
-    "    # with out:\n",
-    "#     compareWidget=compare(appState['fixed'],\n",
-    "#                           appState['moving'],\n",
-    "#                           link_cmap=True,\n",
-    "#                           link_gradient_opacity=True)\n",
+    "\n",
     "\n",
     "viewButton.on_click(viewImages)\n",
     "\n",
@@ -160,11 +210,13 @@
     "        print('Executing '+regType.value+' registration. Please wait...')\n",
     "    \n",
     "    registered_moving = itk.elastix_registration_method(appState['fixed'], appState['moving'], parameter_object=parameters)\n",
+    "    resultViewer=checkerboard(appState['fixed'], registered_moving)\n",
+    "    linkViews(fixedViewer, resultViewer.children[0])\n",
     "    \n",
     "    vboxResult=imageViews.children[2]\n",
     "    vboxResult.children=(Label('Fixed/registered'),\n",
     "                        vboxResult.children[1],\n",
-    "                        checkerboard(appState['fixed'], registered_moving))\n",
+    "                        resultViewer)\n",
     "    \n",
     "    imageViews.children=(imageViews.children[0],\n",
     "                        imageViews.children[1],\n",
@@ -175,6 +227,13 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
