Reuse file upload code as a function

--- a/Jupyter/webRegistration.ipynb
+++ b/Jupyter/webRegistration.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3cc933fdde154f1b9f78351b3976996b",
+       "model_id": "f4a2fa797eeb4f218ffe38f7e81b7e26",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c1c447a1e934d439bbda09dcb05e8c2",
+       "model_id": "9f8de1136be24bebbad0d07df07400ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +36,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa284ee98cae40c2a89dd9d72952189c",
+       "model_id": "ef347f7b01ac44188787b0616a4cd879",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,6 +107,18 @@
     "    ipywidgets.jslink((viewer1, 'y_slice'), (viewer2, 'y_slice'))\n",
     "    ipywidgets.jslink((viewer1, 'z_slice'), (viewer2, 'z_slice'))\n",
     "    ipywidgets.jslink((viewer1, 'slicing_planes'), (viewer2, 'slicing_planes'))\n",
+    "    \n",
+    "\n",
+    "def readUploadedImage(uploader):   \n",
+    "    # using FileUpload's syntax for ipywidgets <= 7\n",
+    "    tempFilename=\"./uploaded_\"+ next(iter(uploader.value))\n",
+    "    with open(tempFilename, \"wb\") as fp:\n",
+    "        fp.write(uploader.data[0]) # write to temporary image file\n",
+    "        \n",
+    "    # I don't know how to read image from memory in Python\n",
+    "    image = itk.imread(tempFilename, itk.F)\n",
+    "    os.remove(tempFilename)\n",
+    "    return image\n",
     "\n",
     "\n",
     "# these FileUpload widgets have maximum file size\n",
@@ -150,23 +162,8 @@
     "\n",
     "\n",
     "def viewImages(b):\n",
-    "    movingButton=Button(description='Moving Updated')\n",
-    "    \n",
-    "    # write to temporary image file\n",
-    "    # I don't know how to read image from memory in Python\n",
-    "    \n",
-    "    # using FileUpload's syntax for ipywidgets <= 7\n",
-    "    tempFilename=\"./fixed_\"+ next(iter(fixedUploader.value))\n",
-    "    with open(tempFilename, \"wb\") as fp:\n",
-    "        fp.write(fixedUploader.data[0])\n",
-    "    appState['fixed'] = itk.imread(tempFilename, itk.F)\n",
-    "    os.remove(tempFilename)\n",
-    "\n",
-    "    tempFilename=\"./moving_\"+ next(iter(movingUploader.value))\n",
-    "    with open(tempFilename, \"wb\") as fp:\n",
-    "        fp.write(movingUploader.data[0])\n",
-    "    appState['moving'] = itk.imread(tempFilename, itk.F)\n",
-    "    os.remove(tempFilename)\n",
+    "    appState['fixed'] = readUploadedImage(fixedUploader)\n",
+    "    appState['moving'] = readUploadedImage(movingUploader)\n",
     "    \n",
     "    fixedViewer.image=appState['fixed']\n",
     "    movingViewer.image=appState['moving']\n",
@@ -227,13 +224,6 @@
     "\n",
     "registerButton.on_click(registerImages)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
